# miden-swift-client

./: .gitignore  Cargo.toml  LICENSE  MidenWallet.swift  README.md  build_ios.sh  cbindgen.toml  clean_build.sh  miden_swift_client.h  walletcore.h
.cargo/: config.toml
examples/: Demo.swift
src/: account.rs  client.rs  hash.rs  lib.rs  memory.rs  notes.rs  runtime.rs  types.rs  wallet.rs
