[package]
name = "miden_swift_client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]  # For iOS packaging

[dependencies]
sha3 = "0.10"          # keccak
hex = "0.4"            # For hex encoding
rand = "0.9"
# miden-client = { path = "../miden-client/crates/rust-client", default-features = false }
miden-client = { version = "0.12", features = ["testing", "tonic"] }
miden-client-sqlite-store = { version = "0.12", package = "miden-client-sqlite-store" }
miden-lib = { version = "0.12", default-features = false }
miden-objects = { version = "0.12", default-features = false, features = ["testing"] }
miden-crypto = { version = "0.17.1", features = ["executable"] }
miden-assembly = "0.18.3"

tokio = { version = "1", features = ["rt-multi-thread"] }
once_cell = "1"

[build-dependencies]
cbindgen = "0.26"      # Generate C header files
